log/build_2026-03-13_22-31-01/auv_teleop/stderr.log
  File "/home/raspberry/Auv_ws/install/auv_teleop/lib/python3.10/site-packages/auv_teleop/xbox_node.py", line 80
    """Converts Euler angles to a ROS Geometry Quaternion."""
       ^^^^^^^^
SyntaxError: invalid syntax

